--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
         <item>Chess</item>
         <item>Hockey</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
+
 </resources>
